--- a/static/css/base_HD.css
+++ b/static/css/base_HD.css
@@ -1,841 +1,40 @@
-@charset "UTF-8";
-.menu {
-  width: 1230px;
-  height: 45px;
-  left: 0px;
-  top: 50px;
-}
-.menu .menu-btn {
-  display: inline-block;
-  width: 90px;
-  height: 45px;
-  margin-left: 10px;
-  background: url(../images/menu_btn_bg.png) 0px 0px no-repeat;
-}
-.menu .menu-btn.back {
-  background-position: 0px 0px;
-}
-.menu .menu-btn.home {
-  background-position: -100px 0px;
-}
-.menu .menu-btn.index {
-  background-position: -200px 0px;
-}
-.menu .menu-btn:focus.back {
-  background-position: 0px -45px;
-}
-.menu .menu-btn:focus.home {
-  background-position: -100px -45px;
-}
-.menu .menu-btn:focus.index {
-  background-position: -200px -45px;
-}
+/*
+Error: Invalid GBK character "\xE5"
+        on line 44 of project/web-qhb/src/sass/base_HD.scss
 
-.btn {
-  text-align: center;
-  display: inline-block;
-  padding: 0 17px;
-  color: red;
-  position: relative;
-  z-index: 2;
-  font-size: 30px;
-}
-.btn span {
-  height: 65px;
-  line-height: 60px;
-  display: block;
-  position: relative;
-}
-.btn.btn-xs {
-  padding: 0;
-  color: #000;
-  font-size: 22px;
-}
-.btn.btn-xs span {
-  width: 140px;
-  line-height: 65px;
-  background: url(../images/btn_xs.png) 0px 0px no-repeat;
-}
-.btn.btn-xs.disable span {
-  line-height: 63px;
-  background: url(../images/btn_xs_disable2.png) 0px -1px no-repeat;
-}
-.btn.btn-sm span {
-  width: 186px;
-  background: url(../images/btn_sm.png) 0px 0px no-repeat;
-}
-.btn.btn-sm.disable {
-  color: #000;
-}
-.btn.btn-sm.disable span {
-  background: url(../images/btn_sm_disable.png) 0px 0px no-repeat;
-}
-.btn.btn-sm.text span:before {
-  content: "";
-  display: block;
-  width: 100%;
-  height: 100%;
-  background: url(../images/btn_text.png) 0px 0px no-repeat;
-  left: 0px;
-  top: 0px;
-}
-.btn.btn-sm.myhb span:before {
-  background-position: 0px 0px;
-}
-.btn.btn-sm.dhjl span:before {
-  background-position: -186px 0px;
-}
-.btn.btn-sm.yxb span:before {
-  background-position: -372px 0px;
-}
-.btn.btn-md span {
-  width: 236px;
-  background: url(../images/btn_md.png) 0px 0px no-repeat;
-}
-.btn.btn-lg span {
-  width: 276px;
-  background: url(../images/btn_lg.png) 0px 0px no-repeat;
-}
-.btn:focus {
-  text-decoration: none;
-  color: #fff;
-}
-.btn:focus:not(.btn-xs):before {
-  position: absolute;
-  display: block;
-  content: "";
-  height: 90px;
-  top: -15px;
-  background: url(../images/btn_outer_glow.png) 0px 0px no-repeat;
-}
-.btn:focus:not(.btn-xs):after {
-  position: absolute;
-  display: block;
-  content: "";
-  height: 90px;
-  width: 50px;
-  top: -15px;
-  z-index: -1;
-  background: url(../images/btn_outer_glow.png) -1230px 0px no-repeat;
-}
-.btn:focus.btn-sm:before {
-  width: 160px;
-  left: 5px;
-}
-.btn:focus.btn-sm:after {
-  left: 165px;
-}
-.btn:focus.btn-md:before {
-  width: 210px;
-  left: 5px;
-}
-.btn:focus.btn-md:after {
-  left: 215px;
-}
-.btn:focus.btn-lg:before {
-  width: 252px;
-  left: 5px;
-}
-.btn:focus.btn-lg:after {
-  left: 257px;
-}
-.btn:focus span {
-  background-position: 0px -65px;
-}
-.btn:focus.text.myhb span:before {
-  background-position: 0px -65px;
-}
-.btn:focus.text.dhjl span:before {
-  background-position: -186px -65px;
-}
-.btn:focus.text.yxb span:before {
-  background-position: -372px -65px;
-}
+39: 		@include bg('top_title','png');
+40: 		@include ps(50,46);
+41: 		z-index:1;
+42: 	}
+43: 	&:after{
+44: 		content:"客服热线：96335";
+45: 		position:absolute;
+46: 		@include ps(1035,666);
+47: 		@include fs(26);
+48: 		color:#c89628;
+49: 	}
 
-.pa {
-  position: absolute;
-}
-
-.pr {
-  position: relative;
-}
-
-.tr {
-  text-align: right;
-}
-
-.tl {
-  text-align: left;
-}
-
-.tc {
-  text-align: center;
-}
-
-.wrap {
-  width: 1280px;
-  height: 720px;
-  left: 0px;
-  top: 0px;
-}
-.wrap.bg-home {
-  background: url(../images/bg1.jpg) 0px 0px no-repeat;
-}
-.wrap.bg-exchange {
-  background: url(../images/bg3.jpg) 0px 0px no-repeat;
-}
-.wrap.bg-myhongbao {
-  background: url(../images/bg4.jpg) 0px 0px no-repeat;
-}
-.wrap.bg-jilu {
-  background: url(../images/bg5.jpg) 0px 0px no-repeat;
-}
-.wrap.bg-yxb {
-  background: url(../images/bg6.jpg) 0px 0px no-repeat;
-}
-.wrap.bg-prefecture {
-  background: url(../images/bg7.jpg) 0px 0px no-repeat;
-}
-.wrap.bg-hbwf {
-  background: url(../images/bg8.jpg) 0px 0px no-repeat;
-}
-.wrap:before {
-  position: absolute;
-  display: block;
-  content: "";
-  width: 317px;
-  height: 54px;
-  background: url(../images/top_title.png) 0px 0px no-repeat;
-  left: 50px;
-  top: 46px;
-  z-index: 1;
-}
-.wrap:after {
-  content: "客服热线：96335";
-  position: absolute;
-  left: 1035px;
-  top: 666px;
-  font-size: 26px;
-  color: #c89628;
-}
-.wrap .btn_bx {
-  position: absolute;
-  height: 68px;
-}
-.wrap .btn_bx.my {
-  width: 1280px;
-  left: 0px;
-  top: 588px;
-}
-.wrap .btn_bx.zqjs {
-  left: 222px;
-  top: 298px;
-}
-.wrap .hbwf {
-  border: 1px solid red;
-  width: 147px;
-  height: 43px;
-  left: 51px;
-  top: 657px;
-  font-size: 28px;
-  color: red;
-  line-height: 43px;
-  border-radius: 100px;
-  -webkit-border-radius: 100px;
-}
-.wrap .hbwf.org {
-  color: #ea5504;
-  border-color: #ea5504;
-}
-.wrap .hbwf:before {
-  content: "红包玩法";
-  width: 100%;
-  line-height: 43px;
-}
-.wrap .hbwf:focus {
-  color: #fff;
-  background: red;
-}
-.wrap .hbwf:focus.org {
-  border-color: red;
-}
-
-.time {
-  font-size: 22px;
-  width: 280px;
-  left: 72px;
-  top: 146px;
-  color: #fff;
-  line-height: 30px;
-}
-
-.residue {
-  width: 349px;
-  height: 55px;
-  left: 467px;
-  top: 83px;
-  font-size: 28px;
-  color: #fff;
-  padding-left: 10px;
-  padding-top: 19px;
-}
-.residue.red {
-  background: url(../images/residue_bg_red.png) 0px 0px no-repeat;
-}
-.residue.gray {
-  background: url(../images/residue_bg_gray.png) 0px 0px no-repeat;
-}
-.residue span {
-  color: #ffff00;
-}
-
-.qing {
-  width: 246px;
-  height: 186px;
-  left: 516px;
-  top: 329px;
-}
-.qing.enable {
-  display: block;
-  background: url(../images/qing_btn.png) 0px 0px no-repeat;
-}
-.qing.enable:focus {
-  background-position: -246px 0px;
-}
-.qing.end {
-  background: url(../images/qing_disabled1.png) 0px 0px no-repeat;
-}
-.qing.null {
-  background: url(../images/qing_disabled2.png) 0px 0px no-repeat;
-}
-
-.roll {
-  width: 734px;
-  font-size: 22px;
-  left: 282px;
-  top: 540px;
-}
-.roll span {
-  padding: 0 10px;
-}
-
-.modal {
-  width: 0px;
-  height: 0px;
-  background: url(../images/alert_bg2.png) 0px 0px repeat;
-  left: 0px;
-  top: 0px;
-  z-index: 10;
-}
-.modal:before {
-  content: "";
-  display: block;
-  position: absolute;
-  width: 0px;
-  height: 0px;
-  left: 0px;
-  top: 0px;
-}
-.modal.show {
-  width: 1280px;
-  height: 720px;
-}
-.modal.show:before {
-  width: 1280px;
-  height: 720px;
-}
-.modal.experience:before {
-  background: url(../images/icon_experience.png) 259px 126px no-repeat;
-}
-.modal.money:before {
-  background: url(../images/icon_momeyhb.png) 259px 126px no-repeat;
-}
-.modal.miss:before {
-  background: url(../images/icon_hbj.png) 253px 100px no-repeat;
-}
-.modal.success:before {
-  background: url(../images/icon_success.png) 164px 0px no-repeat;
-}
-.modal.fail:before {
-  background: url(../images/icon_fail1.png) 202px 119px no-repeat;
-}
-.modal .text {
-  font-size: 75px;
-  width: 366px;
-  color: #ffff00;
-  left: 384px;
-  top: 294px;
-}
-.modal .date {
-  font-size: 24px;
-  left: 616px;
-  top: 408px;
-}
-.modal .date.money {
-  top: 361px;
-}
-.modal .btn_bx {
-  width: 1280px;
-  left: 0px;
-  top: 550px;
-}
-.modal .sptitle {
-  width: 440px;
-  color: #ffff00;
-  left: 420px;
-  top: 320px;
-  font-size: 40px;
-}
-.modal .success-info {
-  width: 400px;
-  padding: 0 20px;
-  left: 420px;
-  top: 393px;
-  font-size: 40px;
-  color: #fff;
-}
-
-.recommend {
-  display: block;
-  width: 484px;
-  height: 260px;
-  left: 389px;
-  top: -15px;
-  z-index: 15;
-}
-.recommend:focus {
-  background: url(../images/recommend_focus.png) 0px 0px no-repeat;
-}
-
-.recommend_bx {
-  width: 1280px;
-  height: 228px;
-  left: 0px;
-  top: 181px;
-}
-.recommend_bx .img_bx {
-  width: 372px;
-  height: 186px;
-  border: 2px solid #fff;
-  background-size: 100%;
-  -webkit-background-size: 100%;
-}
-.recommend_bx .img_bx:before {
-  position: absolute;
-  content: "";
-  display: block;
-  width: 376px;
-  height: 190px;
-  left: -2px;
-  top: -2px;
-  background: url(../images/alert_bg.png) 0px 0px repeat;
-}
-.recommend_bx .img_bx.middle {
-  width: 450px;
-  height: 226px;
-  left: 404px;
-  top: 0px;
-  z-index: 10;
-}
-.recommend_bx .img_bx.middle:before {
-  background: none;
-}
-.recommend_bx .img_bx.right {
-  left: 814px;
-  top: 20px;
-}
-.recommend_bx .img_bx.left {
-  left: 90px;
-  top: 20px;
-}
-.recommend_bx .roll_box {
-  width: 100%;
-  left: 0px;
-  top: 254px;
-}
-.recommend_bx .roll_box span {
-  display: inline-block;
-  background: #e1a442;
-  width: 46px;
-  height: 10px;
-  margin-right: 16px;
-}
-.recommend_bx .roll_box span.active {
-  background: #df0615;
-}
-
-.pg {
-  display: block;
-  width: 55px;
-  height: 110px;
-  background: url(../images/btn_pg.png) 0px 0px no-repeat;
-}
-.pg.next {
-  background-position: -55px 0px;
-}
-.pg.lg.prev {
-  left: 35px;
-}
-.pg.lg.next {
-  left: 1190px;
-}
-.pg.md.prev {
-  left: 85px;
-}
-.pg.md.next {
-  left: 1140px;
-}
-.pg.bottom {
-  top: 513px;
-}
-.pg.middle {
-  top: 343px;
-}
-.pg.middle.hb {
-  top: 400px;
-}
-.pg.middle.jilu {
-  top: 380px;
-}
-.pg:focus.prev {
-  background-position: 0px -220px;
-}
-.pg:focus.next {
-  background-position: -55px -220px;
-}
-.pg:focus.sc.prev {
-  background-position: 0px -110px;
-}
-.pg:focus.sc.next {
-  background-position: -55px -110px;
-}
-
-.quan_bx {
-  width: 1125px;
-  left: 83px;
-  top: 307px;
-}
-.quan_bx.sc {
-  top: 142px;
-}
-.quan_bx .quan {
-  display: inline-block;
-  position: relative;
-  width: 265px;
-  height: 150px;
-  padding: 10px 5px;
-}
-.quan_bx .quan:before {
-  position: absolute;
-  content: "";
-  display: block;
-  width: 265px;
-  height: 150px;
-  left: 7px;
-  top: 0px;
-  background: url(../images/quan_bg.png) 0px 0px no-repeat;
-}
-.quan_bx .quan .imgbx {
-  left: 20px;
-  top: 16px;
-  width: 60px;
-  height: 60px;
-  background: #fff;
-}
-.quan_bx .quan .title {
-  position: absolute;
-  font-size: 28px;
-  left: 90px;
-  top: 32px;
-  color: #fffabe;
-}
-.quan_bx .quan .btn {
-  left: 21px;
-  top: 75px;
-}
-.quan_bx .quan .info {
-  display: block;
-  font-size: 20px;
-  color: #fabea0;
-  border-bottom: 1px solid #fff;
-  left: 167px;
-  top: 109px;
-}
-.quan_bx .quan .info:focus {
-  color: #00fafa;
-  border-bottom-color: #ffff00;
-}
-
-.pgnb {
-  width: 14px;
-  color: red;
-  font-size: 28px;
-  top: 662px;
-  left: 50%;
-  margin-left: -7px;
-}
-.pgnb .curr {
-  width: 100px;
-  top: 0;
-  color: #d19151;
-  text-align: right;
-  left: -104px;
-}
-.pgnb .total {
-  left: 14px;
-  width: 100px;
-  top: 0;
-  text-align: left;
-}
-
-.hb_residue {
-  height: 40px;
-  padding-left: 57px;
-  font-size: 30px;
-  left: 90px;
-  top: 209px;
-  line-height: 40px;
-  padding-top: 6px;
-}
-.hb_residue:before {
-  position: absolute;
-  content: "";
-  display: inline-block;
-  width: 50px;
-  height: 40px;
-  background: url(../images/icon_hb.png) 0px 0px no-repeat;
-  left: 0px;
-  top: 0px;
-}
-
-.hb_bx {
-  width: 1120px;
-  left: 90px;
-  top: 268px;
-}
-.hb_bx .hb {
-  position: relative;
-  display: inline-block;
-  width: 250px;
-  height: 175px;
-  background: url(../images/hb_bg.png) 13px 0px no-repeat;
-  padding: 9px 13px;
-}
-.hb_bx .hb .title {
-  padding-top: 13px;
-  color: #be7d32;
-  width: 184px;
-  font-size: 28px;
-  left: 48px;
-  top: 0px;
-}
-.hb_bx .hb .btn {
-  top: 81px;
-  left: 50%;
-  margin-left: -70px;
-}
-.hb_bx .hb .expire {
-  width: 100%;
-  left: 0px;
-  top: 145px;
-  color: #f39700;
-  font-size: 20px;
-}
-
-.jilu_bx {
-  width: 1142px;
-  left: 70px;
-  top: 243px;
-}
-.jilu_bx .jilu {
-  position: relative;
-  display: inline-block;
-  width: 204px;
-  height: 170px;
-  background: url(../images/jilu_bg.png) 10px 0px no-repeat;
-  padding: 20px 10px;
-}
-.jilu_bx .jilu .imgbx {
-  width: 60px;
-  height: 60px;
-  top: 18px;
-  left: 50%;
-  margin-left: -30px;
-  background: #fff;
-}
-.jilu_bx .jilu .title {
-  width: 100%;
-  font-size: 26px;
-  left: 0px;
-  top: 90px;
-  color: #fffabe;
-}
-.jilu_bx .jilu .expire {
-  width: 175px;
-  height: 25px;
-  border-radius: 200px;
-  -webkit-border-radius: 200px;
-  color: #fff;
-  font-size: 20px;
-  line-height: 25px;
-  left: 50%;
-  top: 131px;
-  margin-left: -88px;
-}
-.jilu_bx .jilu .expire.red {
-  background: #be0000;
-}
-.jilu_bx .jilu .expire.org {
-  background: #ea6600;
-}
-.jilu_bx .jilu .expire.gray {
-  background: #969696;
-}
-
-.yxb_table {
-  width: 860px;
-  line-height: 47px;
-  left: 209px;
-  top: 202px;
-}
-.yxb_table tr {
-  border-bottom: 1px solid #e1a442;
-}
-.yxb_table tr.red {
-  color: red;
-}
-.yxb_table th {
-  font-size: 28px;
-  font-weight: 700;
-  text-align: center;
-}
-.yxb_table tbody {
-  font-size: 28px;
-}
-
-.icon-img {
-  width: 150px;
-  height: 150px;
-  left: 50px;
-  top: 198px;
-  background: #fff;
-}
-.icon-img img {
-  width: 150px;
-  height: 150px;
-}
-
-.prefecture_title {
-  font-size: 48px;
-  left: 238px;
-  top: 198px;
-  font-weight: 700;
-}
-
-.time_limit {
-  font-size: 28px;
-  left: 238px;
-  top: 255px;
-}
-.time_limit:after {
-  content: "";
-  background: #000;
-  display: block;
-  height: 1px;
-  width: 100%;
-  position: absolute;
-  left: -1px;
-  top: 15px;
-}
-
-.cont-text {
-  width: 1170px;
-  font-size: 26px;
-  line-height: 34px;
-  text-indent: 52px;
-  left: 50px;
-  top: 416px;
-}
-
-.error {
-  width: 525px;
-  font-size: 30px;
-  left: 276px;
-  top: 327px;
-}
-
-.hbwf_bx {
-  width: 1100px;
-  left: 90px;
-  top: 252px;
-  font-size: 26px;
-  line-height: 40px;
-}
-.hbwf_bx p {
-  text-indent: 52px;
-}
-
-.scroll_bg:after {
-  content: "";
-  display: block;
-  position: absolute;
-  left: 0;
-  top: 100%;
-}
-.scroll_bg.exchange {
-  width: 30px;
-  height: 477px;
-  left: 1200px;
-  top: 153px;
-  background: url(../images/scroll_bg.jpg) 0px 0px no-repeat;
-}
-.scroll_bg.exchange:after {
-  width: 30px;
-  height: 13px;
-  background: url(../images/scroll_bg.jpg) 0px -707px no-repeat;
-}
-.scroll_bg.hb {
-  left: 1200px;
-  top: 267px;
-  background: url(../images/scroll_bg2.jpg) 0px 0px no-repeat;
-  width: 30px;
-  height: 354px;
-}
-.scroll_bg.hb:after {
-  width: 30px;
-  height: 13px;
-  background: url(../images/scroll_bg2.jpg) 0px -707px no-repeat;
-}
-.scroll_bg .scroll_bar:after {
-  content: "";
-  display: block;
-  position: absolute;
-  top: 100%;
-  z-index: 10;
-}
-.scroll_bg .scroll_bar.exchange {
-  width: 20px;
-  left: 5px;
-  top: 6px;
-  background: url(../images/scroll_bar.jpg) 0px 0px no-repeat;
-}
-.scroll_bg .scroll_bar.exchange:after {
-  width: 20px;
-  height: 13px;
-  background: url(../images/scroll_bar.jpg) 0px -707px no-repeat;
-  left: 0;
-}
-.scroll_bg .scroll_bar.hb {
-  width: 20px;
-  left: 5px;
-  top: 5px;
-  background: url(../images/scroll_bar2.jpg) 0px 0px no-repeat;
-}
-.scroll_bg .scroll_bar.hb:after {
-  width: 20px;
-  height: 13px;
-  background: url(../images/scroll_bar2.jpg) 0px -707px no-repeat;
-  left: 0;
-}
-
-/*# sourceMappingURL=base_HD.css.map */
+Backtrace:
+project/web-qhb/src/sass/base_HD.scss:44
+D:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.15/lib/sass/util.rb:1334:in `rescue in block in find_encoding_error'
+D:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.15/lib/sass/util.rb:1331:in `block in find_encoding_error'
+D:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.15/lib/sass/util.rb:1330:in `each'
+D:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.15/lib/sass/util.rb:1330:in `each_with_index'
+D:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.15/lib/sass/util.rb:1330:in `find_encoding_error'
+D:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.15/lib/sass/util.rb:907:in `check_sass_encoding'
+D:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.15/lib/sass/engine.rb:433:in `check_encoding!'
+D:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.15/lib/sass/engine.rb:389:in `_to_tree'
+D:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.15/lib/sass/engine.rb:378:in `_render_with_sourcemap'
+D:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.15/lib/sass/engine.rb:295:in `render_with_sourcemap'
+D:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.15/lib/sass/exec/sass_scss.rb:410:in `run'
+D:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.15/lib/sass/exec/sass_scss.rb:63:in `process_result'
+D:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.15/lib/sass/exec/base.rb:52:in `parse'
+D:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.15/lib/sass/exec/base.rb:19:in `parse!'
+D:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.15/bin/sass:13:in `<top (required)>'
+D:/Ruby22-x64/bin/sass:23:in `load'
+D:/Ruby22-x64/bin/sass:23:in `<main>'
+*/
+body:before {
+  white-space: pre;
+  font-family: monospace;
+  content: "Error: Invalid GBK character \"\xE5\"\A         on line 44 of project/web-qhb/src/sass/base_HD.scss\A \A 39: 		@include bg('top_title','png');\A 40: 		@include ps(50,46);\A 41: 		z-index:1;\A 42: 	}\A 43: 	&:after{\A 44: 		content:\"客服热线：96335\";\A 45: 		position:absolute;\A 46: 		@include ps(1035,666);\A 47: 		@include fs(26);\A 48: 		color:#c89628;\A 49: 	}"; }
